<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HovedAktivitet">

    <Button
        android:id="@+id/sentrum"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp_spesiell"
        app:backgroundTint="@null"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <Button
        android:id="@+id/hoyre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <Button
        android:id="@+id/venstre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <Button
        android:id="@+id/opp_venstre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_ov"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".45" />

    <Button
        android:id="@+id/opp_hoyre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_oh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".45" />

    <Button
        android:id="@+id/ned_venstre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_nv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".75" />

    <Button
        android:id="@+id/ned_hoyre"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/knapp"
        android:onClick="leggTilBokstav"
        android:text="@string/bokstav_nh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".75" />

    <Button
        android:id="@+id/slett"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/knapp"
        android:onClick="slettInnleggData"
        android:text="@string/slett"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9" />

    <Button
        android:id="@+id/sjekk"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/knapp"
        android:onClick="sjekkOrdet"
        android:text="@string/sjekk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9" />

    <ImageButton
        android:id="@+id/hint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/knapp"
        android:contentDescription="@string/hint"
        android:onClick="visHint"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/hint"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9" />

    <TextView
        android:id="@+id/tekst_felt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst_felt"
        android:textSize="18sp"
        android:textColor="@color/onyx"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <EditText
        android:id="@+id/innlegg_felt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:ems="10"
        android:hint="@string/innlegg_felt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".25" />

    <TextView
        android:id="@+id/antall_gjort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antall"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/funnet_ord"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/onyx"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1" />

</androidx.constraintlayout.widget.ConstraintLayout>